--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link href="./assets/css/styles.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
-      href="https://fonts.google.com/share?selection.family=Raleway:wght@700%7CRoboto:wght@400;500;700;900"
     />
-    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link href="./assets/css/styles.css" rel="stylesheet" />
   </head>
 
   <body class="body">
@@ -34,7 +35,6 @@
         </ul>
       </nav>
       <!-- эл.почта и телефон -->
-
       <ul class="contacts">
         <li class="contacts__item item">
           <a class="item__link link link__mail" href="mailto:info@devstudio.com"
@@ -168,7 +168,7 @@
       <a class="footer__logo logo" href="./index.html">
         Web<span class="logo__part">Studio</span>
       </a>
-      <address class="address">
+      <address class="footer__address address">
         <ul class="address__list list">
           <li class="list__item item">
             <a
