added alt to  portfolio cards

--- a/portfolio.html
+++ b/portfolio.html
@@ -72,63 +72,99 @@
         <ul class="list__cards cards">
           <li class="cards__item item">
             <a class="item__link link" href="#">
-              <img class="link__picture" src="./assets/images/jpg/portfolio-pic1.jpg" alt="" />
+              <img
+                class="link__picture"
+                src="./assets/images/jpg/portfolio-pic1.jpg"
+                alt="Проект веб-сайта Технокряк"
+              />
               <h2 class="link__title">Технокряк</h2>
               <p class="link__paragraph">Веб-сайт</p>
             </a>
           </li>
           <li class="cards__item item">
             <a class="item__link link" href="#">
-              <img class="link__picture" src="./assets/images/jpg/portfolio-pic2.jpg" alt="" />
+              <img
+                class="link__picture"
+                src="./assets/images/jpg/portfolio-pic2.jpg"
+                alt="Дизайн-проект постера New Orlean vs Golden Star"
+              />
               <h2 class="link__title">Постер New Orlean vs Golden Star</h2>
               <p class="link__paragraph">Дизайн</p>
             </a>
           </li>
           <li class="cards__item item">
             <a class="item__link link" href="#">
-              <img class="link__picture" src="./assets/images/jpg/portfolio-pic3.jpg" alt="" />
+              <img
+                class="link__picture"
+                src="./assets/images/jpg/portfolio-pic3.jpg"
+                alt="Проект-додаток Ресторан Seafood"
+              />
               <h2 class="link__title">Ресторан Seafood</h2>
               <p class="link__paragraph">Додаток</p>
             </a>
           </li>
           <li class="cards__item item">
             <a class="item__link link" href="#">
-              <img class="link__picture" src="./assets/images/jpg/portfolio-pic4.jpg" alt="" />
+              <img
+                class="link__picture"
+                src="./assets/images/jpg/portfolio-pic4.jpg"
+                alt="Маркетинг-проект Prime"
+              />
               <h2 class="link__title">Проєкт Prime</h2>
               <p class="link__paragraph">Маркетинг</p>
             </a>
           </li>
           <li class="cards__item item">
             <a class="item__link link" href="#">
-              <img class="link__picture" src="./assets/images/jpg/portfolio-pic5.jpg" alt="" />
+              <img
+                class="link__picture"
+                src="./assets/images/jpg/portfolio-pic5.jpg"
+                alt="Проект-додаток Boxes"
+              />
               <h2 class="link__title">Проєкт Boxes</h2>
               <p class="link__paragraph">Додаток</p>
             </a>
           </li>
           <li class="cards__item item">
             <a class="item__link link" href="#">
-              <img class="link__picture" src="./assets/images/jpg/portfolio-pic6.jpg" alt="" />
+              <img
+                class="link__picture"
+                src="./assets/images/jpg/portfolio-pic6.jpg"
+                alt="Проект веб-сайта Inspiration has no Borders"
+              />
               <h2 class="link__title">Inspiration has no Borders</h2>
               <p class="link__paragraph">Веб-сайт</p>
             </a>
           </li>
           <li class="cards__item item">
             <a class="item__link link" href="#">
-              <img class="link__picture" src="./assets/images/jpg/portfolio-pic7.jpg" alt="" />
+              <img
+                class="link__picture"
+                src="./assets/images/jpg/portfolio-pic7.jpg"
+                alt="Дизайн-проект видання Limited Edition"
+              />
               <h2 class="link__title">Видання Limited Edition</h2>
               <p class="link__paragraph">Дизайн</p>
             </a>
           </li>
           <li class="cards__item item">
             <a class="item__link link" href="#">
-              <img class="link__picture" src="./assets/images/jpg/portfolio-pic8.jpg" alt="" />
+              <img
+                class="link__picture"
+                src="./assets/images/jpg/portfolio-pic8.jpg"
+                alt="Маркетинг-проект LAB"
+              />
               <h2 class="link__title">Проєкт LAB</h2>
               <p class="link__paragraph">Маркетинг</p>
             </a>
           </li>
           <li class="cards__item item">
             <a class="item__link link" href="#">
-              <img class="link__picture" src="./assets/images/jpg/portfolio-pic9.jpg" alt="" />
+              <img
+                class="link__picture"
+                src="./assets/images/jpg/portfolio-pic9.jpg"
+                alt="Проект-додаток Growing Business"
+              />
               <h2 class="link__title">Growing Business</h2>
               <p class="link__paragraph">Додаток</p>
             </a>
