--- a/index.html
+++ b/index.html
@@ -11,93 +11,98 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
-    />
+
+    <link href="./assets/css/core/library.css" rel="stylesheet" />
+    <link href="./assets/css/core/variables.css" rel="stylesheet" />
     <link href="./assets/css/styles.css" rel="stylesheet" />
+    <link href="./assets/css/footer.css" rel="stylesheet" />
+    <link href="./assets/css/header.css" rel="stylesheet" />
   </head>
 
   <body class="body">
     <!-- Шапка -->
     <header class="header">
       <!-- Навигация -->
-      <nav class="navigation">
-        <a class="navigation__logo logo" href="./index.html">
-          Web<span class="logo__part">Studio</span>
-        </a>
-        <ul class="navigation__list list">
-          <li class="list__item item">
-            <a class="item__link" href="./index.html">Студія</a>
-          </li>
-          <li class="list__item item">
-            <a class="item__link" href="./portfolio.html">Портфоліо</a>
-          </li>
-          <li class="list__item item">
-            <a class="item__link" href="#">Контакти</a>
-          </li>
-        </ul>
-      </nav>
-      <!-- эл.почта и телефон -->
-      <ul class="contacts">
-        <li class="contacts__item item">
-          <a class="item__link link link__mail" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="contacts__item item">
-          <a class="item__link link link__phone" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      <div class="container">
+        <nav class="justify-content-between d-flex align-items-center">
+          <div class="d-flex align-items-center">
+            <a class="navigation__logo logo" href="./index.html">
+              Web<span class="logo__part">Studio</span>
+            </a>
+            <ul class="navigation__list list d-flex align-items-center">
+              <li class="list__item item">
+                <a class="item__link" href="./index.html">Студія</a>
+              </li>
+              <li class="list__item item">
+                <a class="item__link" href="./portfolio.html">Портфоліо</a>
+              </li>
+              <li class="list__item item">
+                <a class="item__link" href="#">Контакти</a>
+              </li>
+            </ul>
+          </div>
+          <!-- эл.почта и телефон -->
+          <ul class="contacts d-flex align-items-center">
+            <li class="contacts__item item">
+              <a class="item__link link link-grey" href="mailto:info@devstudio.com">
+                info@devstudio.com
+              </a>
+            </li>
+            <li class="contacts__item item">
+              <a class="item__link link link-grey" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <!-- Основной контент -->
     <main class="main">
-      <section class="hero">
-        <h1 class="hero__title">
-          Ефективні рішення для<br />
-          вашого бізнесу
-        </h1>
-        <button class="hero__button button" type="button">Замовити послугу</button>
+      <section class="general">
+        <div class="container">
+          <h1 class="general__title">Ефективні рішення для вашого бізнесу</h1>
+          <button class="general__action button bg-blue text-white" type="button">
+            Замовити послугу
+          </button>
+        </div>
       </section>
+
       <!-- Плюсы компании -->
-      <section class="features">
+      <section class="features container container-top-padding">
         <!-- Скрытый заголовок -->
-        <h2 class="features__title title title__hidden">Особливості нашої роботи</h2>
-        <ul class="features__list list">
-          <li class="list__item item">
-            <h3 class="item__title">Увага до деталей</h3>
-            <p class="item__paragraph">
-              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
-            </p>
-          </li>
-          <li class="list__item item">
-            <h3 class="item__title">Пунктуальнiсть</h3>
-            <p class="item__paragraph">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
-            </p>
-          </li>
-          <li class="list__item item">
-            <h3 class="item__title">Планування</h3>
-            <p class="item__paragraph">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li class="list__item item">
-            <h3 class="item__title">Сучастнi технології</h3>
-            <p class="item__paragraph">
-              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-            </p>
-          </li>
-        </ul>
+        <div class="d-flex">
+          <h2 class="features__title title title__hidden">Особливості нашої роботи</h2>
+          <ul class="features__list list d-flex">
+            <li class="list__item item">
+              <h3 class="item__title">Увага до деталей</h3>
+              <p class="item__paragraph">
+                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+              </p>
+            </li>
+            <li class="list__item item">
+              <h3 class="item__title">Пунктуальнiсть</h3>
+              <p class="item__paragraph">
+                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+              </p>
+            </li>
+            <li class="list__item item">
+              <h3 class="item__title">Планування</h3>
+              <p class="item__paragraph">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li class="list__item item">
+              <h3 class="item__title">Сучастнi технології</h3>
+              <p class="item__paragraph">
+                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Чем занимается компания -->
-      <section class="gallery">
+      <section class="gallery container container-vertical-padding">
         <h2 class="gallery__title">Чим ми займаємося</h2>
-        <ul class="gallery__list list">
+        <ul class="gallery__list list d-flex justify-content-center">
           <li class="list__item item">
             <img
               class="item__picture"
@@ -125,9 +130,9 @@
         </ul>
       </section>
       <!-- Наша команда -->
-      <section class="our-team">
+      <section class="our-team container-vertical-padding">
         <h2 class="our-team__title">Наша команда</h2>
-        <ul class="our-team__list list">
+        <ul class="our-team__list list d-flex justify-content-center container">
           <li class="list__item item">
             <img
               class="item__picture"
@@ -135,8 +140,11 @@
               alt="Ігор Дем'яненко"
               width="270"
             />
-            <h3 class="item__title">Ігор Дем'яненко</h3>
-            <p class="item__paragraph">Product Designer</p>
+            <div class="item__content">
+              <h3 class="item__title">Ігор Дем'яненко</h3>
+              <!-- TODO paragraph менять на другое, пример - position -->
+              <p class="item__position">Product Designer</p>
+            </div>
           </li>
           <li class="list__item item">
             <img
@@ -145,8 +153,10 @@
               alt="Ольга Рєпіна"
               width="270"
             />
-            <h3 class="item__title">Ольга Рєпіна</h3>
-            <p class="item__paragraph">Frontend Developer</p>
+            <div class="item__content">
+              <h3 class="item__title">Ольга Рєпіна</h3>
+              <p class="item__position">Frontend Developer</p>
+            </div>
           </li>
           <li class="list__item item">
             <img
@@ -155,8 +165,10 @@
               alt="Микола Тарасов"
               width="270"
             />
-            <h3 class="item__title">Микола Тарасов</h3>
-            <p class="item__paragraph">Marketing</p>
+            <div class="item__content">
+              <h3 class="item__title">Микола Тарасов</h3>
+              <p class="item__position">Marketing</p>
+            </div>
           </li>
           <li class="list__item item">
             <img
@@ -165,38 +177,45 @@
               alt="Михайло Єрмаков"
               width="270"
             />
-            <h3 class="item__title">Михайло Єрмаков</h3>
-            <p class="item__paragraph">UI Designer</p>
+            <div class="item__content">
+              <h3 class="item__title">Михайло Єрмаков</h3>
+            <p class="item__position">UI Designer</p>
+            </div>
           </li>
         </ul>
       </section>
     </main>
     <!-- Подвал -->
     <footer class="footer">
-      <a class="footer__logo logo" href="./index.html">
-        Web<span class="logo__part">Studio</span>
-      </a>
-      <address class="footer__address address">
-        <ul class="address__list list">
-          <li class="list__item item">
-            <a
-              class="item__link link link__map"
-              href="https://goo.gl/maps/8viNXfXdV3uJQZfFA"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li class="list__item item">
-            <a class="item__link link link__mail" href="mailto:info@devstudio.com"
-              >info@devstudio.com
-            </a>
-          </li>
-          <li class="list__item item">
-            <a class="item__link link link__phone" href="tel:+380961111111">+38 096 111 11 11 </a>
-          </li>
-        </ul>
-      </address>
+      <div class="container footer__content d-flex">
+        <a class="footer__logo logo" href="./index.html">
+          Web<span class="logo__part">Studio</span>
+        </a>
+        <address class="footer__address address">
+          <ul class="address__list list d-flex">
+            <li class="list__item item">
+              <a
+                class="item__link"
+                href="https://goo.gl/maps/8viNXfXdV3uJQZfFA"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                м. Київ, пр-т Лесі Українки, 26
+              </a>
+            </li>
+            <li class="list__item item item-center">
+              <a class="item__link link link-alpha-grey" href="mailto:info@devstudio.com">
+                info@devstudio.com
+              </a>
+            </li>
+            <li class="list__item item">
+              <a class="item__link link link-alpha-grey" href="tel:+380961111111">
+                +38 096 111 11 11
+              </a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
