added margin by portfolio cards text-content

--- a/portfolio.html
+++ b/portfolio.html
@@ -82,64 +82,82 @@
             <li class="cards__item item">
               <a class="item__link link" href="#">
                 <img class="link__picture" src="./assets/images/jpg/portfolio-pic1.jpg" alt="" />
-                <h2 class="link__title">Технокряк</h2>
-                <p class="link__paragraph">Веб-сайт</p>
+                <div class="item__content">
+                  <h2 class="link__title">Технокряк</h2>
+                  <p class="link__paragraph">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="cards__item item">
               <a class="item__link link" href="#">
                 <img class="link__picture" src="./assets/images/jpg/portfolio-pic2.jpg" alt="" />
-                <h2 class="link__title">Постер New Orlean vs Golden Star</h2>
-                <p class="link__paragraph">Дизайн</p>
+                <div class="item__content">
+                  <h2 class="link__title">Постер New Orlean vs Golden Star</h2>
+                  <p class="link__paragraph">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="cards__item item">
               <a class="item__link link" href="#">
                 <img class="link__picture" src="./assets/images/jpg/portfolio-pic3.jpg" alt="" />
-                <h2 class="link__title">Ресторан Seafood</h2>
-                <p class="link__paragraph">Додаток</p>
+                <div class="item__content">
+                  <h2 class="link__title">Ресторан Seafood</h2>
+                  <p class="link__paragraph">Додаток</p>
+                </div>
               </a>
             </li>
             <li class="cards__item item">
               <a class="item__link link" href="#">
                 <img class="link__picture" src="./assets/images/jpg/portfolio-pic4.jpg" alt="" />
-                <h2 class="link__title">Проєкт Prime</h2>
-                <p class="link__paragraph">Маркетинг</p>
+                <div class="item__content">
+                  <h2 class="link__title">Проєкт Prime</h2>
+                  <p class="link__paragraph">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="cards__item item">
               <a class="item__link link" href="#">
                 <img class="link__picture" src="./assets/images/jpg/portfolio-pic5.jpg" alt="" />
-                <h2 class="link__title">Проєкт Boxes</h2>
-                <p class="link__paragraph">Додаток</p>
+                <div class="item__content">
+                  <h2 class="link__title">Проєкт Boxes</h2>
+                  <p class="link__paragraph">Додаток</p>
+                </div>
               </a>
             </li>
             <li class="cards__item item">
               <a class="item__link link" href="#">
                 <img class="link__picture" src="./assets/images/jpg/portfolio-pic6.jpg" alt="" />
-                <h2 class="link__title">Inspiration has no Borders</h2>
-                <p class="link__paragraph">Веб-сайт</p>
+                <div class="item__content">
+                  <h2 class="link__title">Inspiration has no Borders</h2>
+                  <p class="link__paragraph">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="cards__item item">
               <a class="item__link link" href="#">
                 <img class="link__picture" src="./assets/images/jpg/portfolio-pic7.jpg" alt="" />
-                <h2 class="link__title">Видання Limited Edition</h2>
-                <p class="link__paragraph">Дизайн</p>
+                <div class="item__content">
+                  <h2 class="link__title">Видання Limited Edition</h2>
+                  <p class="link__paragraph">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="cards__item item">
               <a class="item__link link" href="#">
                 <img class="link__picture" src="./assets/images/jpg/portfolio-pic8.jpg" alt="" />
-                <h2 class="link__title">Проєкт LAB</h2>
-                <p class="link__paragraph">Маркетинг</p>
+                <div class="item__content">
+                  <h2 class="link__title">Проєкт LAB</h2>
+                  <p class="link__paragraph">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="cards__item item">
               <a class="item__link link" href="#">
                 <img class="link__picture" src="./assets/images/jpg/portfolio-pic9.jpg" alt="" />
-                <h2 class="link__title">Growing Business</h2>
-                <p class="link__paragraph">Додаток</p>
+                <div class="item__content">
+                  <h2 class="link__title">Growing Business</h2>
+                  <p class="link__paragraph">Додаток</p>
+                </div>
               </a>
             </li>
           </ul>
@@ -180,4 +198,3 @@
     </footer>
   </body>
 </html>
-
