redesigned navigation, footer and portfolio card section

--- a/index.html
+++ b/index.html
@@ -187,12 +187,12 @@
     </main>
     <!-- Подвал -->
     <footer class="footer">
-      <div class="container footer__content d-flex">
+      <div class="container footer__content">
         <a class="footer__logo logo" href="./index.html">
           Web<span class="logo__part">Studio</span>
         </a>
         <address class="footer__address address">
-          <ul class="address__list list d-flex">
+          <ul class="address__list list">
             <li class="list__item item">
               <a
                 class="item__link"
