--- a/portfolio.html
+++ b/portfolio.html
@@ -78,13 +78,16 @@
             </li>
           </ul>
           <!-- Проекты компании -->
-          <ul class="list__cards cards d-flex flex-wrap justify-content-center">
+          <!-- TODO Поменять структуру li для всех элементов ниже -->
+          <ul class="list__cards cards d-flex flex-wrap justify-content-between">
             <li class="cards__item item">
               <a class="item__link link" href="#">
-                <img class="link__picture" src="./assets/images/jpg/portfolio-pic1.jpg" alt="" />
-                <div class="item__content">
-                  <h2 class="link__title">Технокряк</h2>
-                  <p class="link__paragraph">Веб-сайт</p>
+                <div>
+                  <img class="link__picture" src="./assets/images/jpg/portfolio-pic1.jpg" alt="" />
+                  <div class="item__content">
+                    <h2 class="link__title">Технокряк</h2>
+                    <p class="link__paragraph">Веб-сайт</p> <!-- TODO Поменять paragraph на другое название -->
+                  </div>
                 </div>
               </a>
             </li>
@@ -166,12 +169,12 @@
     </main>
     <!-- Подвал -->
     <footer class="footer">
-      <div class="container footer__content d-flex">
+      <div class="container footer__content">
         <a class="footer__logo logo" href="./index.html">
           Web<span class="logo__part">Studio</span>
         </a>
         <address class="footer__address address">
-          <ul class="address__list list d-flex">
+          <ul class="address__list list">
             <li class="list__item item">
               <a
                 class="item__link"
